@@ -1,15 +1,19 @@
 package pe.com.Entregable.socio.servicio;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.crypto.password.PasswordEncoder; // ¡Importa el Encoder!
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import pe.com.Entregable.enums.Estado;
+import pe.com.Entregable.enums.EstadoPuesto;
 import pe.com.Entregable.enums.Sanidad;
+import pe.com.Entregable.enums.TipoDocumento;
 import pe.com.Entregable.login.modelo.Privilegio;
 import pe.com.Entregable.login.modelo.Usuario;
 import pe.com.Entregable.login.repositorio.PrivilegioRepositorio;
 import pe.com.Entregable.login.repositorio.UsuarioRepositorio;
+import pe.com.Entregable.puesto.modelo.Puesto;
+import pe.com.Entregable.puesto.repositorio.PuestoRepositorio;
 import pe.com.Entregable.socio.dto.SocioRequestDTO;
 import pe.com.Entregable.socio.dto.SocioResponseDTO;
 import pe.com.Entregable.socio.modelo.Socio;
@@ -17,6 +21,8 @@ import pe.com.Entregable.socio.repositorio.SocioRepositorio;
 import pe.com.Entregable.util.ResourceNotFoundException;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,69 +30,77 @@ public class SocioServicio implements ISocioService {
 
     private final SocioRepositorio socioRepositorio;
     private final UsuarioRepositorio usuarioRepositorio;
-
-    // --- ¡DEPENDENCIAS INYECTADAS! ---
     private final PasswordEncoder passwordEncoder;
     private final PrivilegioRepositorio privilegioRepositorio;
 
+    private final PuestoRepositorio puestoRepositorio;
+
     @Override
-    @Transactional
+    @Transactional(readOnly = true)
     public List<SocioResponseDTO> listarSocios() {
-        return socioRepositorio
-                .findAll()
-                .stream()
-                .map(SocioResponseDTO::new)
-                .toList();
+        return socioRepositorio.findAll().stream().map(socio -> {
+            SocioResponseDTO dto = new SocioResponseDTO(socio);
+            Optional<Puesto> puesto = puestoRepositorio.findBySocio(socio);
+            puesto.ifPresent(p -> dto.setNumeroPuesto(p.getNumeroPuesto()));
+            return dto;
+        }).collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public SocioResponseDTO obtenerSocioPorId(Integer id) {
-        // (Nota: Tu interfaz usa 'idSocio', así que el DTO y el front deben usar 'id')
-        // Voy a asumir que tu entidad Socio SÍ tiene 'idSocio'
-        Socio socio = socioRepositorio.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Socio", "id", id));
+    public SocioResponseDTO obtenerSocioPorId(Integer idSocio) {
+        Socio socio = socioRepositorio.findById(idSocio)
+                .orElseThrow(() -> new ResourceNotFoundException("Socio", "id", idSocio));
         return new SocioResponseDTO(socio);
     }
 
     @Override
     @Transactional
     public SocioResponseDTO crearSocio(SocioRequestDTO dto) {
-        // 1. Validar que el DNI y Username no existan
         if (usuarioRepositorio.findByUsername(dto.getUsername()).isPresent()) {
-            throw new RuntimeException("El username " + dto.getUsername() + " ya está registrado.");
+            throw new RuntimeException("El username ya existe.");
         }
         if (usuarioRepositorio.findByDni(dto.getDni()).isPresent()) {
-            throw new RuntimeException("El DNI " + dto.getDni() + " ya está registrado.");
+            throw new RuntimeException("El  ya existe.");
         }
 
         Privilegio socioPrivilegio = privilegioRepositorio.findByNombre("SOCIO")
                 .orElseThrow(() -> new ResourceNotFoundException("Privilegio", "nombre", "SOCIO"));
 
-        // 2. Crear el nuevo Usuario
+        // 2. Crear Usuario
         Usuario nuevoUsuario = new Usuario();
         nuevoUsuario.setUsername(dto.getUsername());
+        nuevoUsuario.setTipoDocumento(TipoDocumento.valueOf(dto.getTipoDocumento()));
         nuevoUsuario.setDni(dto.getDni());
         nuevoUsuario.setNombre(dto.getNombre());
         nuevoUsuario.setApellido(dto.getApellido());
         nuevoUsuario.setNumero(dto.getNumero());
-
-        // --- ¡AQUÍ SE ENCRIPTA! ---
         nuevoUsuario.setPassword(passwordEncoder.encode(dto.getPassword()));
-
         nuevoUsuario.setEstado(Estado.ACTIVO);
         nuevoUsuario.setPrivilegio(socioPrivilegio);
-
         Usuario usuarioGuardado = usuarioRepositorio.save(nuevoUsuario);
 
-        // 3. Crear el nuevo Socio y enlazarlo
+        // 3. Crear Socio
         Socio nuevoSocio = new Socio();
         nuevoSocio.setUsuario(usuarioGuardado);
         nuevoSocio.setDireccion(dto.getDireccion());
         nuevoSocio.setTarjetaSocio(dto.getTarjetaSocio());
         nuevoSocio.setCarnetSanidad(Sanidad.valueOf(dto.getCarnetSanidad().toUpperCase()));
-
         Socio socioGuardado = socioRepositorio.save(nuevoSocio);
+
+        if (dto.getIdPuesto() != null && dto.getIdPuesto() > 0) {
+            Puesto puesto = puestoRepositorio.findById(dto.getIdPuesto())
+                    .orElseThrow(() -> new ResourceNotFoundException("Puesto", "id", dto.getIdPuesto()));
+
+            if (puesto.getEstado() == EstadoPuesto.OPERATIVO || puesto.getSocio() != null) {
+                throw new RuntimeException("El puesto seleccionado ya está ocupado.");
+            }
+
+            puesto.setSocio(socioGuardado);
+            puesto.setEstado(EstadoPuesto.OPERATIVO);
+            puestoRepositorio.save(puesto);
+        }
+
         return new SocioResponseDTO(socioGuardado);
     }
 
@@ -97,47 +111,59 @@ public class SocioServicio implements ISocioService {
                 .orElseThrow(() -> new ResourceNotFoundException("Socio", "id", idSocio));
 
         Usuario usuario = socio.getUsuario();
-
-        // Validar DNI y Username
-        if (!usuario.getDni().equals(dto.getDni())) {
-            if (usuarioRepositorio.findByDni(dto.getDni()).filter(u -> !u.getId().equals(usuario.getId())).isPresent()) {
-                throw new RuntimeException("El DNI " + dto.getDni() + " ya pertenece a otro usuario.");
-            }
-            usuario.setDni(dto.getDni());
-        }
-        if (!usuario.getUsername().equals(dto.getUsername())) {
-            if (usuarioRepositorio.findByUsername(dto.getUsername()).filter(u -> !u.getId().equals(usuario.getId())).isPresent()) {
-                throw new RuntimeException("El Username " + dto.getUsername() + " ya pertenece a otro usuario.");
-            }
-            usuario.setUsername(dto.getUsername());
-        }
-
         usuario.setNombre(dto.getNombre());
-        usuario.setApellido(dto.getApellido());
-        usuario.setNumero(dto.getNumero());
-
-        if (dto.getPassword() != null && !dto.getPassword().isEmpty()) {
-            usuario.setPassword(passwordEncoder.encode(dto.getPassword()));
-        }
-
+        usuario.setTipoDocumento(TipoDocumento.valueOf(dto.getTipoDocumento()));
         usuarioRepositorio.save(usuario);
 
         socio.setDireccion(dto.getDireccion());
-        socio.setTarjetaSocio(dto.getTarjetaSocio());
-        socio.setCarnetSanidad(Sanidad.valueOf(dto.getCarnetSanidad().toUpperCase()));
-
         Socio socioActualizado = socioRepositorio.save(socio);
+
+
         return new SocioResponseDTO(socioActualizado);
     }
 
     @Override
     @Transactional
-    public void eliminarSocio(Integer id) {
-        Socio socio = socioRepositorio.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Socio", "id", id));
+    public void eliminarSocio(Integer idSocio) {
+        Socio socio = socioRepositorio.findById(idSocio)
+                .orElseThrow(() -> new ResourceNotFoundException("Socio", "id", idSocio));
 
-        Usuario usuarioAsociado = socio.getUsuario();
-        socioRepositorio.delete(socio);
-        usuarioRepositorio.delete(usuarioAsociado);
+        Usuario usuario = socio.getUsuario();
+
+        if (usuario.getEstado() == Estado.ACTIVO) {
+            usuario.setEstado(Estado.INACTIVO);
+
+            Optional<Puesto> puestoAsignado = puestoRepositorio.findBySocio(socio);
+            if (puestoAsignado.isPresent()) {
+                Puesto puesto = puestoAsignado.get();
+                puesto.setSocio(null);
+                puesto.setEstado(EstadoPuesto.INACTIVO);
+                puestoRepositorio.save(puesto);
+            }
+
+        } else {
+            usuario.setEstado(Estado.ACTIVO);
+        }
+
+        usuarioRepositorio.save(usuario);
+    }
+
+    @Override
+    public SocioResponseDTO obtenerPerfilSocio(String username) {
+        return new SocioResponseDTO(socioRepositorio.findByUsuarioUsername(username).orElseThrow());
+    }
+
+    @Transactional(readOnly = true)
+    @Override
+    public List<SocioResponseDTO> buscarSocios(String termino) {
+        return socioRepositorio.buscarPorTermino(termino)
+                .stream()
+                .map(SocioResponseDTO::new)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean existeUsername(String username) {
+        return usuarioRepositorio.existsByUsername(username);
     }
 }
